--- a/RestaurantSite/index.html
+++ b/RestaurantSite/index.html
@@ -26,7 +26,7 @@
     <!-- Start Header -->
     <header>
       <div class="container">
-        <div class="circle-container">
+        <div class="circle_container">
           <div class="circle">
             <button id="close">
               <i class="fas fa-times"></i>
@@ -42,7 +42,7 @@
             <a href="#"> view our menu </a>
           </div>
           <div class="image">
-            <img src="/images/header.png" alt="header_image" />
+            <img src="/RestaurantSite/images/header.png" alt="header_image" />
           </div>
         </div>
       </div>
@@ -55,5 +55,7 @@
         </ul>
       </nav>
     </header>
+
+    <script></script>
   </body>
 </html>
